--- a/book-app/src/index.css
+++ b/book-app/src/index.css
@@ -1,13 +1,12 @@
 @font-face {
   font-family: 'Spoqa Han Sans Neo';
-  font-style: normal;
-  font-weight: 100;
   src: url(./styles/fonts/NotoSansKR.woff2) format('woff2'),
   url(./styles/fonts/NotoSansKR.woff) format('woff'),
   url(./styles/fonts/NotoSansKR.otf) format('truetype')
 }
-
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-family: 'NotoSansKR',sans-serif;
 }
